force-app/main/default/objects/Contact/fields/No_Longer_at_Company__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_at_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the contact is no longer at this company.</description>
    <label>No Longer at Company</label>
    <type>Checkbox</type>
</CustomField>