force-app/main/default/objects/Contact/fields/Person_has_moved__c.field-meta.xml
<CustomField>
    <fullName>Person_has_moved__c</fullName>
    <description>Additional information about the contact move (e.g. new role, reason).</description>
    <label>Person Has Moved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>