force-app/main/default/objects/Contact/fields/Previous_Company_Text_c__c.field-meta.xml
<CustomField>
    <fullName>Previous_Company_Text_c__c</fullName>
    <description>Name of the company the contact moved to.</description>
    <label>Previous Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>